--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
         <td>pip</td>
       </tr>
     </table>
+    <iframe src="https://mdn-samples.mozilla.org/snippets/html/iframe-simple-contents.html" title="iframe example 1" width="400" height="300">
+  <p>Your browser does not support iframes.</p>
+</iframe>
 
 
     <hr>
